syntax= "proto3";

package accounts_service;
import "accounts_service_v1_messages.proto";
option go_package = "accounts_service/v1/protos";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    schemes: HTTP;
    schemes: HTTPS;
    consumes: "application/json";
    produces: "application/json";

    info: {
        title: "Accounts service";
        version: "1.0";
        contact: {
            name: "Falokut";
            url: "https://github.com/Falokut";
            email: "timur.sinelnik@yandex.ru";
        };
    }
    responses: {
		key: "404";
		value: {
			description: "Returned when the resource does not exist.";
			schema: {
				json_schema: {
					ref: "#/definitions/googlerpcStatus";
				}
			}
		}
	}
    responses: {
		key: "404";
		value: {
			description: "Returned when session with specified id not found.";
			schema: {
				json_schema: {
					ref: "#/definitions/googlerpcStatus";
				}
			}
		}
	}
    responses: {
		key: "500";
		value: {
			description: "Something went wrong.";
			schema: {
				json_schema: {
					ref: "#/definitions/googlerpcStatus";
				}
			}
		}
	}
};

service accountsServiceV1 {
    rpc CreateAccount(CreateAccountRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            post: "/v1/sign-up"
            body: "*" 
        };

        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "400"
                    value: {
                        description: "Returned when specified params is not valid."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "409"
                    value: {
                        description: "Returned when account with email is alredy exists."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
        };
    }
    rpc DeleteAccount(google.protobuf.Empty) returns(google.protobuf.Empty){
        option (google.api.http) = { delete: "/v1/account" };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            parameters: {
                headers: {
                    name: "X-Session-Id";
                    description: "ID of the session issued when logging in to the account";
                    type: STRING;
                    required: true; 
                };
                headers: {
                    name: "X-Machine-Id";
                    description: "Unique identifier of the client machine";
                    type: STRING;
                    required: true; 
                };
            }
            responses: {
                key: "400"
                    value: {
                        description: "Returned when has problem with parameters in headers."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "401"
                    value: {
                        description: "Returned when X-Session-Id not found in header params."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when account with specified id not found"
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            }; 
        };
    }
    
    rpc RequestAccountVerificationToken(VerificationTokenRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            get: "/v1/verification"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "400";
                value: {
                    description: "Returned when account with specified email alredy exist or email is not valid";
                    schema: {
                        json_schema: {
                            ref: "#/definitions/googlerpcStatus";
                        }
                    }
                }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when account with specified email not found."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            }; 
        };
    }

    rpc VerifyAccount(VerifyAccountRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            post: "/v1/verification/{VerificationToken}"
            body: "*" 
        };

        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "400"
                    value: {
                        description: "Returned when has wrong token."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when account with specified email in token not found."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            }; 
        };
    }

    rpc SignIn(SignInRequest) returns(AccessResponse){
        option (google.api.http) = {
            post: "/v1/sign-in"
            body: "*" 
        };

        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "400"
                    value: {
                        description: "Returned when specified password is not an account password."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when account with specified email not found."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            parameters: {
                headers: {
                    name: "X-Machine-Id";
                    description: "Unique identifier of the client machine";
                    type: STRING;
                    required: true; 
                };
            }; 
        };
    }

    rpc GetAccountId(google.protobuf.Empty) returns(google.protobuf.Empty){
        option (google.api.http) = { get: "/v1/account-id" };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            parameters: {
                headers: {
                    name: "X-Session-Id";
                    description: "ID of the session issued when logging in to the account";
                    type: STRING;
                    required: true; 
                };
                headers: {
                    name: "X-Machine-Id";
                    description: "Unique identifier of the client machine";
                    type: STRING;
                    required: true; 
                };
            };
            responses: {
                key: "200"
                value: {
                    headers: {
                        key: "X-Account-Id"
                        value: {
                            type: "string"
                        }
                    }
                   
                }
            };
            responses: {
                key: "400"
                value: {
                    description: "Returned when has problem with parameters in headers."
                    schema: {
                        json_schema: {
                            ref: "#/definitions/googlerpcStatus";
                        }
                    }
                }
            };
            responses: {
                key: "401"
                    value: {
                        description: "Returned when X-Session-Id not found in header params."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when session with specified id not found."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            }; 
        };
    } 

    rpc Logout(google.protobuf.Empty) returns(google.protobuf.Empty){
        option (google.api.http) = {
            post: "/v1/logout"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            parameters: {
                headers: {
                    name: "X-Session-Id";
                    description: "ID of the session issued when logging in to the account";
                    type: STRING;
                    required: true; 
                };
                headers: {
                    name: "X-Machine-Id";
                    description: "Unique identifier of the client machine";
                    type: STRING;
                    required: true; 
                };
            };
            responses: {
                key: "400"
                value: {
                    description: "Returned when has problem with parameters in headers."
                    schema: {
                        json_schema: {
                            ref: "#/definitions/googlerpcStatus";
                        }
                    }
                }
            };
            responses: {
                key: "401"
                value: {
                    description: "Returned when X-Session-Id not found in header params."
                    schema: {
                        json_schema: {
                            ref: "#/definitions/googlerpcStatus";
                        }
                    }
                }
            };
            responses: {
                key: "404"
                value: {
                    description: "Returned when session with specified id not found."
                    schema: {
                        json_schema: {
                            ref: "#/definitions/googlerpcStatus";
                        }
                    }
                }
            }; 
        };
    }

    rpc RequestChangePasswordToken(ChangePasswordTokenRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            get: "/v1/change/password"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "404";
                value: {
                    description: "Returned when account with specified email doesn't exist.";
                    schema: {
                        json_schema: {
                            ref: "#/definitions/googlerpcStatus";
                        }
                    }
                }
            };
        };
    }

    rpc ChangePassword(ChangePasswordRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            post: "/v1/change-password"
            body: "*" 
        };

        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            responses: {
                key: "400"
                    value: {
                        description: "Returned when has wrong token or specified password not valid."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when specified account with email in token not found."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
             
        };
    }

    rpc GetAllSessions(google.protobuf.Empty) returns(AllSessionsResponse){
        option (google.api.http) = {get: "/v1/sessions"};
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            parameters: {
                headers: {
                    name: "X-Session-Id";
                    description: "ID of the session issued when logging in to the account.";
                    type: STRING;
                    required: true; 
                };
                headers: {
                    name: "X-Machine-Id";
                    description: "Unique identifier of the client machine";
                    type: STRING;
                    required: true; 
                };
            };
            responses: {
                key: "400"
                    value: {
                        description: "Returned when has problem with parameters in headers."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "401"
                    value: {
                        description: "Returned when X-Session-Id not found in header params."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when session with specified id not found."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            }; 
        };
    };     

    rpc TerminateSessions(TerminateSessionsRequest) returns(google.protobuf.Empty){
        option (google.api.http) = {
            post: "/v1/sessions/terminate"
            body: "*"
         };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            parameters: {
                headers: {
                    name: "X-Session-Id";
                    description: "ID of the session issued when logging in to the account";
                    type: STRING;
                    required: true; 
                };
                headers: {
                    name: "X-Machine-Id";
                    description: "Unique identifier of the client machine";
                    type: STRING;
                    required: true; 
                };
            }
            responses: {
                key: "400"
                    value: {
                        description: "Returned when has problem with parameters in headers."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "401"
                    value: {
                        description: "Returned when X-Session-Id not found in header params."
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            };
            responses: {
                key: "404"
                    value: {
                        description: "Returned when session with specified id not found"
                        schema: {
                            json_schema: {
                                ref: "#/definitions/googlerpcStatus";
                            }
                        }
                    }
            }; 
        };
    }


}