syntax= "proto3";

package accounts_service;
option go_package = "accounts_service/v1/protos";
import "google/protobuf/timestamp.proto";

message CreateAccountRequest {
    string Email = 1 [json_name = "email"];
    string Username = 2 [json_name ="username"];
    string Password = 3 [json_name = "password"];
    string RepeatPassword = 4 [json_name = "repeat_password"];
}

message VerificationTokenRequest {
    string Email = 1 [json_name = "email"];
    string URL = 2 [json_name = "url"];
}

message VerifyAccountRequest {
    string VerificationToken = 1 [json_name = "verification_token"];
}

message SignInRequest {
    string Email = 1 [json_name = "email"];
    string Password = 2 [json_name = "password"];
    string ClientIp = 3[json_name = "client_ip"]; 
}

message AccessResponse {
    string SessionID = 1 [json_name = "session_id"];
}

message ChangePasswordTokenRequest {
    string Email = 1 [json_name = "email"];
    string URL = 2 [json_name = "url"];
}

message ChangePasswordRequest {
    string ChangePasswordToken = 1 [json_name = "change_password_token"];
    string NewPassword = 2 [json_name = "new_password"];
} 


message SessionInfo {
    // IP address of the user's client
    string  ClientIp = 1 [json_name = "client_ip"];
    string MachineId = 2[json_name="machine_id"];
    // last activity time in UTC
    google.protobuf.Timestamp LastActivity = 3 [json_name = "last_activity"];
}

message AllSessionsResponse {
    map<string, SessionInfo> Sessions = 1 [json_name = "sessions"];
}

message TerminateSessionsRequest {
    repeated string SessionsToTerminate = 1 [json_name = "sessions_to_terminate"];
}
 

 message UserErrorMessage {string message = 1[json_name = "message"]; }